# bbq

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doxy/: CMakeLists.txt  doxy.conf
paper/: papers.bib
src/: CMakeLists.txt  main.cpp
src/field/: basefield.hpp  fermionfield.hpp  gaugefield.hpp  lattice.hpp  neighbours.hpp
src/math/: gamma.hpp  matrixfactory.hpp  mod.hpp  pauli.hpp  sl.hpp  sln.hpp  spinor.hpp  su.hpp  subase.hpp  sufactory.hpp  sun.hpp  sunbase.hpp  sunfactory.hpp
src/montecarlo/: heatbath.hpp  montecarlo.hpp
src/observables/: observable.hpp  wilsonloop.hpp
src/operators/: operator.hpp  overlapdirac.hpp  wilsondirac.hpp
src/solver/: bicgstab.hpp  cg.hpp  fgmres.hpp  gmres.hpp  solver.hpp
src/util/: memory.hpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake
test/field/: CMakeLists.txt  latticetest.cpp
test/math/: CMakeLists.txt  gammatest.cpp
